<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Camera</string>
    <string name="video_camera_label">Camcorder</string>
    <string name="cancel_button_description">Cancel</string>
    <string name="confirm_button_description">Confirm</string>
    <string name="flash_button_description">Flash mode</string>
    <string name="flip_camera_button_description">Flip camera</string>
    <string name="gallery_button_description">Gallery</string>
    <string name="google_lens_button_description">Open Google Lens</string>
    <string name="image_view_description">Image preview</string>
    <string name="pro_button_description">Pro settings</string>
    <string name="shutter_button_description">Shutter</string>
    <string name="video_recording_state_button_description">Pause/resume video recording</string>
    <string name="timer_off">TIMER OFF</string>
    <string name="timer_3">TIMER 3s</string>
    <string name="timer_10">TIMER 10s</string>
    <string name="aspect_ratio_4_3" translatable="false">4:3</string>
    <string name="aspect_ratio_16_9" translatable="false">16:9</string>
    <string name="video_quality_sd" translatable="false">480p</string>
    <string name="video_quality_hd" translatable="false">720p</string>
    <string name="video_quality_fhd" translatable="false">1080p</string>
    <string name="video_quality_uhd" translatable="false">2160p</string>
    <string name="video_framerate_auto">AUTO FPS</string>
    <string name="video_framerate_value"><xliff:g example="60" id="fps">%d</xliff:g> FPS</string>
    <string name="effect_none">NONE</string>
    <string name="effect_bokeh" translatable="false">BOKEH</string>
    <string name="effect_hdr" translatable="false">HDR</string>
    <string name="effect_night">NIGHT</string>
    <string name="effect_face_retouch">FACE RETOUCH</string>
    <string name="effect_auto">AUTO</string>
    <string name="grid_off">GRID OFF</string>
    <string name="grid_on_3">GRID 3x3</string>
    <string name="grid_on_4">GRID 4x4</string>
    <string name="grid_on_goldenratio">GRID φ</string>
    <string name="mic_off">MIC OFF</string>
    <string name="mic_on">MIC ON</string>
    <string name="settings">SETTINGS</string>
    <string name="app_permissions_toast">Permissions not granted by the user.</string>
    <string name="camcorder_unsupported_toast">No camera supports video recording.</string>
    <string name="qr_copy_description">Copy to clipboard</string>
    <string name="qr_icon_description">Icon</string>
    <string name="qr_share_description">Share</string>
    <string name="qr_no_app_available_for_action">No app available to handle this action</string>
    <string name="qr_address_title">Add contact</string>
    <string name="qr_address_content_description">Add contact</string>
    <string name="qr_calendar_title">Add event to calendar</string>
    <string name="qr_calendar_content_description">Add this event to the calendar</string>
    <string name="qr_dpp_title" translatable="false">Wi-Fi Easy Connect™ (DPP)</string>
    <string name="qr_dpp_description">Configure this device</string>
    <string name="qr_email_title">Send a new email</string>
    <string name="qr_email_content_description">Compose a new email to the specified emails</string>
    <string name="qr_fido_title">Use passkey</string>
    <string name="qr_fido_content_description">Handle this FIDO QR code</string>
    <string name="qr_geo_title">Open this location</string>
    <string name="qr_geo_content_description">Open this location</string>
    <string name="qr_isbn_title">Lookup this ISBN</string>
    <string name="qr_isbn_content_description">Search this ISBN on isbnsearch.org</string>
    <string name="qr_product_title">Lookup product</string>
    <string name="qr_product_content_description">Lookup this product ID barcode</string>
    <string name="qr_sms_title">Send a new SMS</string>
    <string name="qr_sms_content_description">Send a new SMS to the specified recipients</string>
    <string name="qr_tel_title">Call phone number</string>
    <string name="qr_tel_content_description">Call the phone number</string>
    <string name="qr_text">Text</string>
    <string name="qr_uri_title">Open URL</string>
    <string name="qr_uri_content_description">Open this URL with the appropriate app if supported</string>
    <string name="qr_vin_title">Lookup VIN</string>
    <string name="qr_vin_content_description">Lookup this Vehicle Identification Number (VIN)</string>
    <string name="qr_wifi_title">Connect to this Wi-Fi network</string>
    <string name="qr_wifi_content_description">Add this Wi-Fi network to the list of known networks and connect the device to it</string>
    <string name="title_activity_settings">Settings</string>
    <string name="general_header">General</string>
    <string name="photos_header">Photos</string>
    <string name="video_header">Video</string>
    <string name="advanced_header">Advanced</string>
    <string name="bright_screen_title">Bright screen</string>
    <string name="bright_screen_summary" formatted="false">Locks brightness to 100%</string>
    <string name="save_location_title">Save location data</string>
    <string name="save_location_summary">Include GPS location in metadata</string>
    <string name="save_location_toast">Location permissions not granted by the user.</string>
    <string name="shutter_sound_title">Shutter sound</string>
    <string name="shutter_sound_summary">Play a sound on capture</string>
    <string name="leveler_title">Leveler</string>
    <string name="leveler_summary">Indicator that shows device orientation</string>
    <string name="volume_buttons_action_title">Volume buttons action</string>
    <string name="photo_capture_mode_title">Capture mode</string>
    <string name="photo_capture_mode_maximize_quality">Maximize quality</string>
    <string name="photo_capture_mode_minimize_latency">Minimize latency</string>
    <string name="enable_zsl_title">Enable ZSL when available</string>
    <string name="enable_zsl_summary">Use Zero-Shutter Lag mode when the camera supports it. On this mode photo effects are disabled. Note that this mode is currently experimental</string>
    <string name="photo_ffc_mirror_title">Mirror front camera</string>
    <string name="photo_ffc_mirror_summary">Save front camera photos as they appear in the preview</string>
    <string name="video_stabilization_title">Enable video stabilization</string>
    <string name="video_stabilization_summary">When available, enable video stabilization to reduce camera vibrations during recording</string>
    <string name="video_mirror_mode_title">Enable video mirroring</string>
    <string name="processing_title">Processing</string>
    <string name="processing_info">On photo mode, when ZSL mode is used, only default and off values will be taken into consideration. For video mode, only default, off and fast values will be taken into consideration.</string>
    <string name="edge_mode_title">Sharpening</string>
    <string name="edge_mode_summary">Edge enhancement improves sharpness and details in the captured image.</string>
    <string name="edge_mode_default">Default</string>
    <string name="edge_mode_off">Off</string>
    <string name="edge_mode_fast">Fast</string>
    <string name="edge_mode_high_quality">High quality</string>
    <string name="noise_reduction_mode_title">Denoising</string>
    <string name="noise_reduction_mode_summary">The noise reduction algorithm attempts to improve image quality by removing excessive noise added by the capture process, especially in dark conditions.</string>
    <string name="noise_reduction_mode_default">Default</string>
    <string name="noise_reduction_mode_off">Off</string>
    <string name="noise_reduction_mode_fast">Fast</string>
    <string name="noise_reduction_mode_high_quality">High quality</string>
    <string name="noise_reduction_mode_minimal">Minimal</string>
    <string name="shading_mode_title">Vignette correction</string>
    <string name="shading_mode_summary">Quality of lens shading correction applied to the image data.</string>
    <string name="shading_mode_default">Default</string>
    <string name="shading_mode_off">Off</string>
    <string name="shading_mode_fast">Fast</string>
    <string name="shading_mode_high_quality">High quality</string>
    <string name="color_correction_aberration_mode_title">Color aberration correction</string>
    <string name="color_correction_aberration_mode_summary">Chromatic (color) aberration is caused by the fact that different wavelengths of light can not focus on the same point after exiting from the lens.</string>
    <string name="color_correction_aberration_mode_default">Default</string>
    <string name="color_correction_aberration_mode_off">Off</string>
    <string name="color_correction_aberration_mode_fast">Fast</string>
    <string name="color_correction_aberration_mode_high_quality">High quality</string>
    <string name="distortion_correction_mode_title">Distortion correction</string>
    <string name="distortion_correction_mode_summary">Mode of operation for the lens distortion correction block.</string>
    <string name="distortion_correction_mode_default">Default</string>
    <string name="distortion_correction_mode_off">Off</string>
    <string name="distortion_correction_mode_fast">Fast</string>
    <string name="distortion_correction_mode_high_quality">High quality</string>
    <string name="hot_pixel_mode_title">Hot pixel correction</string>
    <string name="hot_pixel_mode_summary">Hot pixel correction interpolates out, or otherwise removes, pixels that do not accurately measure the incoming light (i.e. pixels that are stuck at an arbitrary value or are oversensitive).</string>
    <string name="hot_pixel_mode_default">Default</string>
    <string name="hot_pixel_mode_off">Off</string>
    <string name="hot_pixel_mode_fast">Fast</string>
    <string name="hot_pixel_mode_high_quality">High quality</string>
    <string name="shortcut_selfie">Take a selfie</string>
    <string name="shortcut_video">Take a video</string>
    <string name="shortcut_qr">Scan a barcode</string>
    <string name="location_permission_dialog_title">Add photo and video locations</string>
    <string name="location_permission_dialog_description">Map your memories by including location metadata with each capture.</string>
    <string name="location_permission_dialog_later">Later</string>
    <string name="location_permission_dialog_turn_on">Turn on</string>
    <string name="error_max_cameras_in_use">Maximum number of open cameras has been reached, try to close other apps using the device\'s cameras.</string>
    <string name="error_camera_in_use">This camera is already in use, try closing the app using it.</string>
    <string name="error_stream_config">There was an error while preparing the stream. Please report this to the developers.</string>
    <string name="error_other_recoverable_error">Error while setting up the session. The app will try to recover.</string>
    <string name="error_camera_disabled">The camera is disabled. This might be caused by the device policy.</string>
    <string name="error_camera_fatal_error">A fatal error has been encountered. Try to restart your device.</string>
    <string name="error_do_not_disturb_mode_enabled">Do Not Disturb mode is enabled. Disable it and reopen the app.</string>
    <string name="error_unknown_recoverable">A recoverable unknown error has been found. Please report this to the developers.</string>
    <string name="error_unknown_critical">A critical unknown error has been found. Please report this to the developers.</string>
    <string name="error_no_cameras_available">No cameras were found on the device, cannot start the app.</string>
    <string name="gesture_action_shutter">Shutter</string>
    <string name="gesture_action_zoom">Zoom</string>
    <string name="gesture_action_volume">Volume</string>
</resources>